--- a/maingame/index.html
+++ b/maingame/index.html
@@ -9801,11 +9801,67 @@
 
           font-family:
 
-            Georgia,
+            "WenQuanYi Micro Hei",
 
-            Times New Roman,
+            "Microsoft YaHei",
 
-            serif;
+            "PingFang SC",
+
+            "Hiragino Sans GB",
+
+            "Helvetica Neue",
+
+            Arial,
+
+            sans-serif;
+
+          font-weight: 400;
+
+          line-height: 1.6;
+
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+
+          font-family:
+
+            "WenQuanYi Micro Hei",
+
+            "Microsoft YaHei",
+
+            "PingFang SC",
+
+            "Hiragino Sans GB",
+
+            "Helvetica Neue",
+
+            Arial,
+
+            sans-serif;
+
+          font-weight: 600;
+
+        }
+
+        .btn, button, input[type="button"], input[type="submit"] {
+
+          font-family:
+
+            "WenQuanYi Micro Hei",
+
+            "Microsoft YaHei",
+
+            "PingFang SC",
+
+            "Hiragino Sans GB",
+
+            "Helvetica Neue",
+
+            Arial,
+
+            sans-serif;
+
+          font-weight: 500;
 
         }
 
@@ -9881,7 +9937,7 @@
 
           max-width: 1600px;
 
-          height: 581px;
+          height: 575px;
 
           margin: auto;
 
