--- a/maingame/index.html
+++ b/maingame/index.html
@@ -2949,11 +2949,13 @@
               sound.play().catch(e => console.log('播放人物历程音效失败:', e));
             }
 
-            (console.log('📚 打开历史记录界面...'), $('#history-modal').show(), await this.updateHistoryModal());
+            console.log('📚 人物历程功能暂未实现，仅播放音效');
+            // 弹窗功能已暂时移除
+            // (console.log('📚 打开历史记录界面...'), $('#history-modal').show(), await this.updateHistoryModal());
 
           } catch (e) {
 
-            console.error('❌ 打开历史记录界面失败:', e);
+            console.error('❌ 人物历程音效播放失败:', e);
 
           }
 
@@ -9824,6 +9826,8 @@
 
 
 
+
+      }
 
       @layer components {
 
@@ -20270,6 +20274,4 @@
   - 只能在类脑、旅程二传
 ================================================================================
 -->
-
-
 
